python/testData/quickFixes/PyAddImportQuickFixTest/beforeStatementAboveBoundComments/main.py

# some comment #
################

print(<error descr="Unresolved reference 'a'"><caret>a</error>)